--- a/index.html
+++ b/index.html
@@ -4,9 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
+    <script defer src="js/main.js"></script>
     <title>Document</title>
+    
 </head>
+
 <body>
-    Hi
+    <h2>Welcome to game</h2>
+
+    <div class="secretWord">__</div>   
+
+    <main>
+        <div class="row1btn"></div>
+            <button>A</button>  
+            <button>B</button>  
+            <button>C</button>  
+            <button>D</button>  
+            <button>E</button>  
+            <button>F</button>  
+            <button>G</button>  
+            <button>H</button>  
+            <button>I</button> 
+        </div> 
+        <button>J</button>  
+        <button>K</button>  
+        <button>L</button>  
+        <button>M</button>  
+        <button>N</button>  
+        <button>O</button>  
+        <button>P</button>  
+        <button>Q</button>  
+        <button>R</button>  
+        <button>S</button>  
+        <button>T</button>  
+        <button>U</button>  
+        <button>V</button>  
+        <button>W</button>  
+        <button>Y</button>  
+        <button>X</button>  
+        <button>Z</button>  
+    </main>
+
 </body>
+
 </html>
