added random word generater and made css button style updates

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="secretWord">__</div>   
 
     <main>
-        <div class="row1btn"></div>
+        <div class="row1btn">
             <button>A</button>  
             <button>B</button>  
             <button>C</button>  
@@ -27,25 +27,29 @@
             <button>H</button>  
             <button>I</button> 
         </div> 
-        <button>J</button>  
-        <button>K</button>  
-        <button>L</button>  
-        <button>M</button>  
-        <button>N</button>  
-        <button>O</button>  
-        <button>P</button>  
-        <button>Q</button>  
-        <button>R</button>  
-        <button>S</button>  
-        <button>T</button>  
-        <button>U</button>  
-        <button>V</button>  
-        <button>W</button>  
-        <button>Y</button>  
-        <button>X</button>  
-        <button>Z</button>  
+        <div class="row2btn">
+            <button>J</button>  
+            <button>K</button>  
+            <button>L</button>  
+            <button>M</button>  
+            <button>N</button>  
+            <button>O</button>  
+            <button>P</button>  
+            <button>Q</button>  
+            <button>R</button>  
+        </div>
+        <div class="row3btn">
+            <button>S</button>  
+            <button>T</button>  
+            <button>U</button>  
+            <button>V</button>  
+            <button>W</button>  
+            <button>Y</button>  
+            <button>X</button>  
+            <button>Z</button>  
+        </div>
     </main>
-
+    <footer>Wrong guesses here</footer>
 </body>
 
 </html>
