re-did state vaiables and completed board initialization to handle clicks

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <h2>Welcome to game</h2>
 
-    <div class="secretWord">__</div>   
+    <div id="guessed-word"></div>   
 
     <main>
         <div class="row1btn">
