added a play again button that initializes new game

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="css/main.css">
     <script defer src="js/main.js"></script>
     <title>Document</title>
-    
+    <div>
+
+    </div>
 </head>
 
 <body>
-    <h2>Welcome to game</h2>
+    <h2 id="messages">Wrong Guesses Left:</h2>
 
     <div id="guessed-word"></div>   
 
@@ -49,7 +51,9 @@
             <button>Z</button>  
         </div>
     </main>
-    <footer>Wrong guesses here</footer>
+    <footer>
+        <button id="play-button">PLAY AGAIN!</button>
+    </footer>
 </body>
 
 </html>
