--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     
     <h2 id="messages">Wrong Guesses Left:</h2>
-    <img src="">
+    <img id="spaceman" src="">
     <div id="guessed-word"></div>   
 
     <main>
