updated styling to show button background color after user selection

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <main>
         <div class="row1btn">
-            <button id="A">A</button>  
+            <button>A</button>  
             <button>B</button>  
             <button>C</button>  
             <button>D</button>  
